# demo-python-project-backstage

./: LICENSE  README.md  demo-component.yaml  mkdocs.yml  noxfile.py  okteto.yml  openapi.json  pyproject.toml  runner.yaml
.github/workflows/: ci.yml  codeql-analysis.yml
src/demo123/: main.py
src/demo_python_project_backstage/: __init__.py  main.py
templates/: convert.html
tests/: __init__.py  test_demo123.py  test_demo_python_project_backstage.py
